PCHR-2547: Fix btn-groups hovers missing border

--- a/base/scss/overrides/reset/_civicrm.scss
+++ b/base/scss/overrides/reset/_civicrm.scss
@@ -121,3 +121,7 @@ input.crm-form-text {
   height: 18px;
   width: 13px;
 }
+
+.btn-group .btn:hover {
+  border-color: $crm-darker-grayblue;
+}
